<resources>
    <string name="app_name">SG Cities</string>
    <string name="buttonStart">Comenzar</string>
    <string name="menuItemAboutUs">App info</string>
    <string name="menuItemEnd">Finalizar</string>
    <string name="send_poll">Enviar encuesta</string>
    <string-array name="occupation_level">
        <item>Ocupación</item>
        <item>Vacio</item>
        <item>Hasta 10 pasajeros</item>
        <item>Mitad asientos ocupados</item>
        <item>Total asientos ocupados</item>
        <item>Algunos de pie</item>
        <item>Pasillo lleno</item>
        <item>Muy lleno</item>
    </string-array>
    <string-array name="bus_types">
        <item>Vehículo</item>
        <item>Autobus</item>
        <item>Autobus c/rampa p/disc</item>
        <item>Midibus</item>
        <item>Midibus c/rampa p/disc</item>
        <item>Autobus de lujo</item>
    </string-array>
    <string-array name="orientation_options">
        <item></item>
        <item>NS</item>
        <item>SN</item>
        <item>PO</item>
        <item>OP</item>
    </string-array>

    <string name="login_failed_unknown_reason">algo salio mal durante la autenticación, intenta de nuevo</string>
    <string name="login_failed_user_unknown">el usuario no existe, contacta a los administradores</string>
    <string name="login_failed_wrong_password">contrasena incorrecta, contacta a los administradores</string>

    <!-- API URLs -->
    <string name="asc_desc_assignment_api_url">/app/api/capturistAscDescAssignments?capturist_id=</string>
    <string name="vehicular_cap_assignment_api_url">/app/api/capturistVehicularCapacityAssignments?capturist_id=</string>
    <string name="visual_occupation_assignment_api_url">/app/api/capturistVisualOccupationAssignments?capturist_id=</string>
    <string name="orig_dest_assignment_api_url">/app/api/capturistOriginDestinyAssignments?capturist_id=</string>

    <!-- Assignments request messages -->
    <string name="volley_request_no_internet_connection">Falló la conexión a Internet"</string>
    <string name="volley_request_no_assignments_found">No se encontraron tareas para tu usuario</string>

    <!-- Login activity -->
    <string name="login_btn_text">Iniciar sesión</string>
    <string name="login_password_hint">contraseña</string>
    <string name="login_password_text">Clave:</string>
    <string name="login_user_name_hint">nombre de usuario</string>
    <string name="login_user_text">Usuario:</string>

    <!-- Vehicular capacity activity -->
    <string name="sound_active">Sonido activado</string>
    <string name="sound_inactive">Sonido desactivado</string>

    <!-- Visual occupation activity -->
    <string name="input_validation_route">Ingresa una ruta</string>
    <string name="input_validation_level">Ingresa un nivel de ocupación</string>
    <string name="input_validation_type">Ingresa un tipo de vehiculo</string>
    <string name="record_saved">"Registro guardado"</string>

</resources>
