<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginForm"
    >

    <ProgressBar
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/validate_user_progress_bar">
    </ProgressBar>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="71dp"
        android:text="@string/login_user_text" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/usernameTextView"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:textStyle="italic"
        android:layout_toEndOf="@+id/usernameTextView"
        android:layout_toRightOf="@+id/usernameTextView"
        android:inputType="textEmailAddress"
        android:background="@null"
        android:ems="10"
        android:hint="@string/login_user_name_hint" />

    <TextView
        android:id="@+id/user_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/usernameTextView"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/login_password_text" />

    <EditText
        android:id="@+id/user_key_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_key"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="53dp"
        android:layout_toEndOf="@+id/user_key"
        android:textStyle="italic"
        android:layout_toRightOf="@+id/user_key"
        android:inputType="textPassword"
        android:background="@null"
        android:ems="10"
        android:hint="@string/login_password_hint" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/submit"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/login_btn_text"
        android:textAllCaps="false" />
    <TextView
        android:id="@+id/login_status"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/submit"
        android:textSize="12dp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/holo_red_light" />

</RelativeLayout>